--- a/MicroSocialPlatform/Views/People/PeoplePartial.cshtml
+++ b/MicroSocialPlatform/Views/People/PeoplePartial.cshtml
@@ -9,7 +9,7 @@
     </div>
     <form asp-route="profile" asp-route-id="@Model.UserProfile.Id" style="display: contents;" method="get">
         <button type="submit" class="view-people-btn">
-            <p>View profile</p>
+            View profile
         </button>
     </form>
 
