--- a/MicroSocialPlatform/Views/Post/CommentPartial.cshtml
+++ b/MicroSocialPlatform/Views/Post/CommentPartial.cshtml
@@ -14,13 +14,13 @@
             <form method="get" asp-route="edit_comment" asp-route-id="@Model.Id" style="display: contents;">
                 <button type="submit" class="edit-comment-button">
                     <ion-icon name="create-outline"></ion-icon>
-                    <p>Edit</p>
+                    Edit
                 </button>
             </form>
             <form method="post" asp-route="delete_comment" asp-route-id="@Model.Id" style="display: contents;">
                 <button type="submit" class="delete-comment-button">
                     <ion-icon name="trash-outline"></ion-icon>
-                    <p>Delete</p>
+                    Delete
                 </button>
             </form>
         </div>
