--- a/MicroSocialPlatform/Views/Home/PostPartial.cshtml
+++ b/MicroSocialPlatform/Views/Home/PostPartial.cshtml
@@ -55,13 +55,13 @@
         <form method="get" asp-route="edit_post" asp-route-id="@Model.Id" style="display: contents;">
             <button type="submit" class="edit-post-button">
                 <ion-icon name="create-outline"></ion-icon>
-                <p>Edit</p>
+                Edit
             </button>
         </form>
         <form method="post" asp-route="delete_post" asp-route-id="@Model.Id" style="display: contents;">
             <button type="submit" class="delete-post-button">
                 <ion-icon name="trash-outline"></ion-icon>
-                <p>Delete</p>
+                Delete
             </button>
         </form>
     </div>
