--- a/MicroSocialPlatform/wwwroot/css/Login.css
+++ b/MicroSocialPlatform/wwwroot/css/Login.css
@@ -78,7 +78,7 @@ body{
 
 .container .drop .content h2{
     position: relative;
-    color:  var(--all-text-color);;
+    color:  white;
     font-size: 1.5em;
 }
 
@@ -119,11 +119,11 @@ body{
     background: transparent;
     width: 100%;
     font-size:1em ;
-    color: var(--all-text-color);;
+    color: white;
     padding: 10px 15px;
 }
 .container .drop .content form .inputBox input[type="submit"]{
-    color:  var(--all-text-color);;
+    color:  white;
     text-transform: uppercase;
     font-size: 1em;
     cursor: pointer;
