--- a/MicroSocialPlatform/Views/Shared/MyLayout.cshtml
+++ b/MicroSocialPlatform/Views/Shared/MyLayout.cshtml
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" type="text/css" href="~/css/Generic.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/MenuBar.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/SearchBar.css" asp-append-version="true">
@@ -15,7 +15,8 @@
     <link rel="stylesheet" type="text/css" href="~/css/PostEditor.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/CommentEditor.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/People.css" asp-append-version="true">
-   
+    <link rel="stylesheet" type="text/css" href="~/css/Group.css" asp-append-version="true">
+
     <title> @ViewBag.Title</title>
 </head>
 <body>
