--- a/MicroSocialPlatform/wwwroot/css/Group.css
+++ b/MicroSocialPlatform/wwwroot/css/Group.css
@@ -381,7 +381,40 @@
     transition: all 0.3s ease-in-out;
     color: #79c7c5;
 }
-
+.edit-group{
+    align-items: center;
+    float: right;
+    justify-content: center;
+    position: absolute;
+    right: -2%;
+    top: 5%;
+    width: 10%;
+    display: flex;
+   
+}
+.edit-group-button{
+    align-items: center;
+    background-color: #fff;
+    border: 1px solid;
+    border-radius: 10px 20px 20px 20px;
+    background: var(--avatar-background);
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    height: 5vh;
+    justify-content: center;
+    overflow: hidden;
+    transition: .3s;
+    width: 90%;
+    color:black;
+    font-size: 1rem;
+}
+.edit-group-button:hover{
+    background-color: #f5cfcf;
+    box-shadow: 0 0 4px #111;
+    transform: scale(1.2);
+    transition: .3s
+}
 @keyframes bounce {
     30% {
         transform: translateY(-2px);
