--- a/MicroSocialPlatform/Views/Post/Index.cshtml
+++ b/MicroSocialPlatform/Views/Post/Index.cshtml
@@ -1,10 +1,14 @@
 @using MicroSocialPlatform.Data
+@using Microsoft.AspNetCore.Identity
 @model Post 
 @inject ApplicationDbContext DbContext;
+@inject UserManager<AppUser> UserManager;
 @{
     Layout = "MyLayout";
     ViewData["Title"] = "Show Post";
-    int num_comments = DbContext.Comments.Count(c => c.PostId == Model.Id);
+    int numComments = DbContext.Comments.Count(c => c.PostId == Model.Id);
+    // Only the owner or the admin can edit the post.
+    bool canEdit = UserManager.GetUserId(User) == Model.UserId || User.IsInRole("Admin");
 }
 <section class="post-with-comments">
     <div class="post-s">
@@ -15,9 +19,13 @@
                     <p class="username">@Model.User.UserName</p>
                 </button>
             </form>
-            <div class="settings-post-btn">
-                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-            </div>
+            @if (canEdit)
+            {
+                // Show the options button.
+                <div class="settings-post-btn">
+                    <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                </div>
+            }
         </div>
         <div class="post-feed">
             <div class="post-img-container">
@@ -36,7 +44,7 @@
             </div>
 
             <span class="likes">3.4k</span>
-            <span class="comment-count">@num_comments</span>
+            <span class="comment-count">@numComments</span>
 
         </div>
         <div class="comments-s">
