--- a/MicroSocialPlatform/wwwroot/css/Group.css
+++ b/MicroSocialPlatform/wwwroot/css/Group.css
@@ -1,4 +1,4 @@
-.groups{
+.groups {
     display: flex;
     flex-direction: column;
     margin: auto 6vw;
@@ -6,13 +6,15 @@
     height: 100vh;
     align-items: center;
     overflow: hidden;
-    gap:5vh
+    gap: 5vh
 }
-.link-to-new-group{
+
+.link-to-new-group {
     margin: auto;
 }
+
 .new-group-btn {
-    margin-top:5vh;
+    margin-top: 5vh;
     backdrop-filter: blur(10px);
     background: rgba(139, 139, 139, 0.23);
     border-radius: var(--default-border-r);
@@ -22,13 +24,17 @@
     color: #f5f5f5;
     font-size: 1.2rem;
 }
+.new-group-btn:hover {
+   cursor:pointer;
+}
 .chat-container {
-    margin:auto auto;
+    margin: auto auto;
     position: relative;
     width: 90%;
     height: 85vh;
 }
-.description{
+
+.description {
     position: absolute;
     background: var(--avatar-background);
     opacity: 0.9;
@@ -42,7 +48,8 @@
     text-align: center;
     border-bottom: 1px solid #000000;
 }
-.description p{
+
+.description p {
     margin: auto;
     color: black;
     font-size: 0.9rem;
@@ -50,6 +57,7 @@
     word-wrap: break-word;
     hyphens: auto;
 }
+
 .groups-container {
     background: linear-gradient(to bottom left, #7e5072 20%, #e2a1a1 100%);
     opacity: 0.9;
@@ -59,6 +67,7 @@
     box-shadow: -5px 5px 10px rgba(119, 119, 119, .5);
     overflow-x: hidden;
 }
+
 .information {
     position: absolute;
     background: var(--chat-bars-color);
@@ -70,6 +79,7 @@
     border-radius: 10px 0 0 10px;
     box-shadow: -5px 5px 10px rgba(119, 119, 119, .5);
 }
+
 /*chat messages */
 .chat-groups {
     text-decoration: none;
@@ -92,6 +102,7 @@
     margin-left: 14px;
     font-size: 0.9em;
 }
+
 .chat-people {
     position: absolute;
     width: 100%;
@@ -120,35 +131,41 @@
     color: var(--all-text-color);
     font-size: 0.9em;
 }
+
 .person {
     padding: 12px 0 12px 12px;
     border-bottom: 1px solid #000000;
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    gap:1vh;
+    gap: 1vh;
     text-decoration: none;
 }
-.group-name{
+
+.group-name {
     padding: 12px 0 12px 12px;
     border-bottom: 1px solid #000000;
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    gap:1vh;
+    gap: 1vh;
     text-align: center;
 }
-.group-name a{
+
+.group-name a {
     color: black;
     font-size: 1.2rem;
 }
+
 .person:hover {
     background: var(--person-hover);
     transition: all 0.3s ease-in-out;
 }
+
 .person:hover span {
     color: black;
 }
+
 .group-name:hover {
     background: var(--person-hover);
     transition: all 0.3s ease-in-out;
@@ -159,7 +176,7 @@
 }
 
 .profile {
-    background: var(--chat-input-bg) ;
+    background: var(--chat-input-bg);
     width: 100%;
     height: 15%;
     align-items: center;
@@ -168,7 +185,7 @@
     flex-direction: column;
     position: sticky;
     z-index: 100;
-    top:0;
+    top: 0;
 }
 
 .chatbox {
@@ -381,7 +398,8 @@
     transition: all 0.3s ease-in-out;
     color: #79c7c5;
 }
-.edit-group{
+
+.edit-group {
     align-items: center;
     float: right;
     justify-content: center;
@@ -390,9 +408,10 @@
     top: 5%;
     width: 10%;
     display: flex;
-   
+
 }
-.edit-group-button{
+
+.edit-group-button {
     align-items: center;
     background-color: #fff;
     border: 1px solid;
@@ -406,15 +425,17 @@
     overflow: hidden;
     transition: .3s;
     width: 90%;
-    color:black;
+    color: black;
     font-size: 1rem;
 }
-.edit-group-button:hover{
+
+.edit-group-button:hover {
     background-color: #f5cfcf;
     box-shadow: 0 0 4px #111;
     transform: scale(1.2);
     transition: .3s
 }
+
 @keyframes bounce {
     30% {
         transform: translateY(-2px);
@@ -430,4 +451,87 @@
         opacity: 0.5;
     }
 }
- 
+
+
+.new-group-container {
+    margin: auto auto;
+    width: 80vh;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    padding: 0 3vh 20px;
+    box-shadow: var(--profile-box-shadow);
+    background: var(--btn-bg);
+    backdrop-filter: blur(10px);
+    overflow-x: hidden;
+    align-items: center;
+    text-align: center;
+    line-height: 5rem;
+    border-radius: 10px 200px 10px 200px;
+    color: var(--all-text-color);;
+}
+
+.title-cont {
+    margin: 3% 20% 3% 20%;
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+.titlu-group {
+    font-size: 1rem;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+}
+
+.titlu-group .text {
+
+    width: 30vh;
+    height: 20vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.add-description {
+    font-size: 1rem;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+}
+
+.add-description .text {
+    width: 30vh;
+    height: 20vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+.membri{
+    height: 5vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.optiuni{
+    background: transparent;
+    border-radius: 10px 200px 10px 200px;
+    position: relative;
+    overflow: hidden;
+    font-size: 0.6em;
+    width: 10%!important;
+    height: 10%!important;
+}
+.creat-group-btn{
+    margin: auto auto;
+    width: 20vh;
+    height: 5vh;
+    box-shadow: var(--profile-box-shadow);
+    background: var(--btn-bg);
+    backdrop-filter: blur(10px);
+    border-radius: 10px 300px 10px 300px;
+    align-self: flex-end;
+    color:  var(--all-text-color);;
+    font-size: 1rem;
+}
+.creat-group-btn:hover {
+    cursor:pointer;
+}
