--- a/MicroSocialPlatform/Views/Group/PersonPartial.cshtml
+++ b/MicroSocialPlatform/Views/Group/PersonPartial.cshtml
@@ -4,4 +4,12 @@
     <span class="title">@Model.User.UserName</span>
     <span class="role">@Model.Status</span>
     <span class="join-date">@Model.JoinDate</span>
+    @if (Model.Status == MembershipStatus.Pending)
+    {
+        <form method="post" asp-route="accept_group_membership" asp-route-id="@Model.Id">
+            <button type="submit">
+                Accept Membership
+            </button>
+        </form>
+    }
 </div>
